--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <div class="container-carousel">
         </div>
     </main>
-    <script src="script.js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
