--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <div class="container-carousel">
+        <div class="container-carousel position-relative text-white">
+            <i id="Pre-button" class="fa-solid fa-circle-arrow-left position-absolute top-50"></i>
+            <i id="Next-button" class="fa-solid fa-circle-arrow-right position-absolute top-50 end-0"></i>
         </div>
     </main>
     <script src="script.js"></script>
