--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
     <main>
-        <div class="container-carousel position-relative text-white">
+        <div class="container-carousel position-relative text-white slider">
             <i id="Pre-button" class="fa-solid fa-circle-arrow-left position-absolute top-50"></i>
             <i id="Next-button" class="fa-solid fa-circle-arrow-right position-absolute top-50 end-0"></i>
         </div>
     </main>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
