--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header >
+        <h1 class="text-uppercase text-center m-0 p-3 text-white">Boolean Gaming</h1>
+    </header>
     <main>
         <div class="container-carousel position-relative text-white slider">
+            <div class="carousel-indicators">
+                <button id="btn-1" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" ></button>
+                <button id="btn-2" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button id="btn-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button id="btn-4" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button id="btn-5" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              </div>
             <i id="Pre-button" class="fa-solid fa-circle-arrow-left position-absolute top-50"></i>
             <i id="Next-button" class="fa-solid fa-circle-arrow-right position-absolute top-50 end-0"></i>
         </div>
     </main>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+   
 </body>
 </html>
